--- a/fimco/pochi/templates/pochi/group_settings.html
+++ b/fimco/pochi/templates/pochi/group_settings.html
@@ -39,16 +39,22 @@
                                                 Profile
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="#add" data-toggle="tab">
-                                                Add Member
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#remove" data-toggle="tab">
-                                                Remove Member
-                                            </a>
-                                        </li>
+                                        {% for this_group in groups %}
+                                            {% if this_group.name == group %}
+                                                {% if this_group.admin %}
+                                                <li>
+                                                    <a href="#add" data-toggle="tab">
+                                                        Add Member
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="#remove" data-toggle="tab">
+                                                        Remove Member
+                                                    </a>
+                                                </li>
+                                                {% endif %}
+                                            {% endif %}
+                                        {% endfor %}
                                         <li>
                                             <a href="#administrators" data-toggle="tab">
                                                 Administrators
@@ -88,10 +94,12 @@
                                                         <div class="tab-content transparent">
                                                             <div id="tab1_nobg" class="tab-pane active">
                                                                 {% for member in members %}
-                                                                    <i class="fa fa-user"></i>
-                                                                    <p class="inline-block">
-                                                                    {{ member }}
-                                                                    </p>
+                                                                    <div>
+                                                                        <i class="fa fa-user"></i>
+                                                                        <p class="inline-block">
+                                                                        {{ member }}
+                                                                        </p>
+                                                                    </div>
                                                                 {% endfor %}
                                                             </div>
                                                             <div id="tab2_nobg" class="tab-pane">
@@ -103,83 +111,88 @@
                                                 <!-- /panel content -->
                                             </div>
                                         </div>
+                                        {% for this_group in groups %}
+                                            {% if this_group.name == group %}
+                                                {% if this_group.admin %}
+                                                    <div id="add" class="tab-pane">
+                                                        <form class="add-member" method="post" action="{% url 'group_member' group 'add' %}">
+                                                            {% csrf_token %}
+                                                            <div class="panel panel-default">
+                                                                <div class="panel-heading panel-heading-transparent">
+                                                                    <strong>Add Members</strong>
+                                                                </div>
+                                                                <div class="panel panel-body">
+                                                                    <div class="row">
+                                                                        <fieldset>
+                                                                            <div class="form-group">
+                                                                                <div class="col-xs-8">
+                                                                                    <input type="text" id="member" class="form-control" name="option[]" title=""/>
+                                                                                </div>
+                                                                                <div class="col-xs-4">
+                                                                                    <button type="button" class="btn btn-default addButton"><i class="fa fa-plus"></i></button>
+                                                                                </div>
+                                                                            </div>
 
-                                        {% if admin %}
-                                        <div id="add" class="tab-pane">
-                                            <form class="add-member" method="post" action="{% url 'group_member' group 'add' %}">
-                                                {% csrf_token %}
-                                                <div class="panel panel-default">
-                                                    <div class="panel-heading panel-heading-transparent">
-                                                        <strong>Add Members</strong>
-                                                    </div>
-                                                    <div class="panel panel-body">
-                                                        <div class="row">
-                                                            <fieldset>
-                                                                <div class="form-group">
-                                                                    <div class="col-xs-8">
-                                                                        <input type="text" id="member" class="form-control" name="option[]" title=""/>
+                                                                            <!-- The option field template containing an option field and a Remove button -->
+                                                                            <div class="form-group hide" id="optionTemplate">
+                                                                                <div class="col-xs-8">
+                                                                                    <input class="form-control" type="text" name="option[]" title=""/>
+                                                                                </div>
+                                                                                <div class="col-xs-4">
+                                                                                    <button type="button" class="btn btn-default removeButton"><i class="fa fa-minus"></i></button>
+                                                                                </div>
+                                                                            </div>
+                                                                        </fieldset>
                                                                     </div>
-                                                                    <div class="col-xs-4">
-                                                                        <button type="button" class="btn btn-default addButton"><i class="fa fa-plus"></i></button>
+                                                                    <div class="row">
+                                                                        <div class="col-xs-12" align="center">
+                                                                            <input type="hidden" id="members" name="members" value=""/>
+                                                                            <button type="submit" id="done" class="btn btn-primary" >
+                                                                                <i class="fa fa-check"></i> ADD MEMBER
+                                                                            </button>
+                                                                        </div>
                                                                     </div>
                                                                 </div>
+                                                            </div>
+                                                        </form>
+                                                    </div>
 
-                                                                <!-- The option field template containing an option field and a Remove button -->
-                                                                <div class="form-group hide" id="optionTemplate">
-                                                                    <div class="col-xs-8">
-                                                                        <input class="form-control" type="text" name="option[]" title=""/>
+                                                    <div id="remove" class="tab-pane">
+                                                        <form class="remove-member" method="post" action="{% url 'group_member' group 'remove' %}">
+                                                            {% csrf_token %}
+                                                            <div class="panel panel-default">
+                                                                <div class="panel-heading panel-heading-transparent">
+                                                                    <strong>Remove a member</strong>
+                                                                </div>
+                                                                <div class="panel-body">
+                                                                    <div class="row">
+                                                                        <div class="col-xs-12">
+                                                                            {% for member in members %}
+                                                                                <div>
+                                                                                    <label class="checkbox">
+                                                                                        <input type="checkbox" name="members[]" value="{{ member }}">
+                                                                                        <i></i> {{ member }}
+                                                                                    </label>
+                                                                                </div>
+                                                                            {% endfor %}
+                                                                        </div>
                                                                     </div>
-                                                                    <div class="col-xs-4">
-                                                                        <button type="button" class="btn btn-default removeButton"><i class="fa fa-minus"></i></button>
+                                                                    <div class="row">
+                                                                        <div class="col-xs-12" align="center">
+                                                                            <input type="hidden" id="rejected" name="rejected" value=""/>
+                                                                            <button type="submit" id="remove" class="btn btn-primary" >
+                                                                                <i class="fa fa-check"></i> REMOVE MEMBER(S)
+                                                                            </button>
+                                                                        </div>
                                                                     </div>
                                                                 </div>
-                                                            </fieldset>
-                                                        </div>
-                                                        <div class="row">
-                                                            <div class="col-xs-12" align="center">
-                                                                <input type="hidden" id="members" name="members" value=""/>
-                                                                <button type="submit" id="done" class="btn btn-primary" >
-                                                                    <i class="fa fa-check"></i> ADD MEMBER
-                                                                </button>
                                                             </div>
-                                                        </div>
+                                                        </form>
                                                     </div>
-                                                </div>
-                                            </form>
-                                        </div>
+                                                {% endif %}
+                                            {% endif %}
+                                        {% endfor %}
 
-                                        <div id="remove" class="tab-pane">
-                                            <form class="remove-member" method="post" action="{% url 'group_member' group 'remove' %}">
-                                                {% csrf_token %}
-                                                <div class="panel panel-default">
-                                                    <div class="panel-heading panel-heading-transparent">
-                                                        <strong>Remove a member</strong>
-                                                    </div>
-                                                    <div class="panel-body">
-                                                        <div class="row">
-                                                            <div class="col-xs-12">
-                                                                {% for member in members %}
-                                                                    <label class="checkbox">
-                                                                        <input type="checkbox" name="members[]" value="{{ member }}">
-                                                                        <i></i> {{ member }}
-                                                                    </label>
-                                                                {% endfor %}
-                                                            </div>
-                                                        </div>
-                                                        <div class="row">
-                                                            <div class="col-xs-12" align="center">
-                                                                <input type="hidden" id="rejected" name="rejected" value=""/>
-                                                                <button type="submit" id="remove" class="btn btn-primary" >
-                                                                    <i class="fa fa-check"></i> REMOVE MEMBER(S)
-                                                                </button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </form>
-                                        </div>
-
-                                        {% endif %}
                                         <div id="administrators" class="tab-pane">
                                             <div class="panel panel-default">
                                                 <div class="panel-heading panel-heading-transparent">
