changed statement template in pochi

--- a/fimco/pochi/templates/pochi/statement.html
+++ b/fimco/pochi/templates/pochi/statement.html
@@ -75,7 +75,7 @@
                                 <tbody>
                                 {% for transaction in transactions %}
                                     <tr class="odd gradeX">
-                                        <td class="center">{{ transaction.fulltimestamp }}</td>
+                                        <td class="center">{{ transaction.full_timestamp }}</td>
                                         <td class="center">{{ transaction.account }}</td>
                                         <td class="center">{{ transaction.msisdn }}</td>
                                         <td class="center">{{ transaction.service }}</td>
